# heat-pump-cost

./: .gitattributes  .gitignore  README.md  article.md  code-generator.agent.md  considerations.md  conversations.md  cop-estimation.md  domestic-hot-water.md  impediments.md  operations-design.md  operations-dynamic.md  operations-static.md  operations.md  pyproject.toml  radiator-survey.md  radiator-upgrade.md  system-identification.md
assets/: components.odg  house-model-dynamic.odg  house-model.odg  radiator-upgrades.odg  smooth-operator.odg
data/: heat-pump-ratings.csv  home-improvements.csv  temperatures-1.csv  temperatures-2.csv
src/heat_pump_cost/: __init__.py  __main__.py  analyze_scenarios.py  calculate_scenarios_corrected.py  cli.py  cost_calculator.py  dynamic_thermal_model.py  identify_thermal_parameters.py  operations_model.py  plot_cost_analysis.py  plot_temperatures.py  plotter.py  radiator_analysis.py  simulate_gas_boiler.py  simulate_smooth_heat_pump.py  simulate_tariff_optimized.py
