[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heat-pump-cost"
version = "0.1.0"
description = "Analysis of heat pump and insulation cost optimization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.scripts]
heat-pump-cost = "heat_pump_cost.cli:main"
